# cmake-world

./: CMakeLists.txt  CxxBLAS.cpp  CxxBLAS.hpp  CxxLAPACK.cpp  CxxLAPACK.hpp  Py3-pure-embedding.cpp  README.md  arch-dependent-i386.cpp  arch-dependent-i686.cpp  arch-dependent-x86_64.cpp  check_arch.cpp  check_compile.cpp  check_def.cpp  hash.cpp  hello-embedded-python.c  linear-algebra-BLAS-LAPACK.cpp  linear-algebra.cpp  print_info.c.in  processor-info.cpp  use_numpy.py  version.c  version.cpp  version.h.in  version.hpp.in
boost-example/: CMakeLists.txt  path-info.cpp
git-hash/: CMakeLists.txt  git-hash.cmake  git-hash.cpp
mpi-example/: CMakeLists.txt  mpi-example.cpp
openmp-example/: CMakeLists.txt  example.cpp
tests/boost/: CMakeLists.txt  sum_integers.hpp  sum_integers_test.cpp
tests/catch2/: CMakeLists.txt  main.cpp  sum_integers.cpp  sum_integers_test.cpp
tests/failed/: CMakeLists.txt  test.py
tests/fixtures/: CMakeLists.txt
tests/google/: CMakeLists.txt  sum_integer_test.cpp
tests/longtime/: CMakeLists.txt  longtime_test.py
tests/memory/: CMakeLists.txt  leaky_implementation.cpp  leaky_implementation.hpp  leaky_implementation_test.cpp
tests/parallel/: CMakeLists.txt
tests/parallel/test/: c.py
tests/sample/: CMakeLists.txt  main.cpp
tests/subset/: CMakeLists.txt
tests/subset/test/: feature-b.py
zeromq-example/: CMakeLists.txt  hwclient.c  hwserver.c
